# embroidery-studio

./: .eslintrc.json  .gitignore  .prettierrc.json  CONTRIBUTING.md  DEVELOPMENT.md  INSTALLATION.md  README.md  VISION.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/resources/: fabric-colors.json
src-tauri/resources/colors/: vendors.json
src-tauri/resources/palettes/: Anchor.json  DMC.json  Madeira.json
src-tauri/resources/patterns/: piggies.oxs  piggies.xsd
src-tauri/src/: error.rs  lib.rs  logger.rs  main.rs  pattern.rs  pattern.test.rs  state.rs
src-tauri/src/commands/: history.rs  mod.rs  palette.rs  path.rs  pattern.rs  stitches.rs
src-tauri/src/core/: history.rs  history.test.rs  mod.rs
src-tauri/src/core/actions/: mod.rs  palette.rs  palette.test.rs  stitches.rs  stitches.test.rs
src-tauri/src/core/commands/: mod.rs  stitches.rs  stitches.test.rs
src-tauri/src/core/parser/: embproj.rs
src-tauri/src/core/parser/oxs/: oxs.rs  utils.rs  v1_0.rs
src-tauri/src/core/parser/xsd/: mod.rs  read.rs  xsd.rs  xsd.test.rs
src-tauri/src/core/pattern/: display.rs  pattern.rs  print.rs  project.rs
src-tauri/src/core/pattern/stitches/: fullstitch.rs  line.rs  mod.rs  node.rs  partstitch.rs  special.rs  stitches.rs  stitches.test.rs
src-tauri/src/events/: pattern.rs
src-tauri/src/parser/: embproj.rs  format.rs  mod.rs  oxs.rs  oxs.test.rs  xsd.rs  xsd.test.rs
src-tauri/src/parser/oxs/: mod.rs  oxs.rs  parser.rs  utils.rs  v1_0.rs  v1_0.test.rs
src-tauri/src/parser/xsd/: pmaker_floss_brands.json  read.test.rs  xsd.rs  xsd.test.rs
src-tauri/src/pattern/: display.rs  events.rs  mod.rs  oxs.rs  oxs.test.rs  pattern.rs  pattern.test.rs  pm_floss_brands.json  print.rs  project.rs  xsd.rs  xsd.test.rs
src-tauri/src/pattern/stitches/: fullstitch.rs  line.rs  mod.rs  node.rs  partstitch.rs  special.rs  stitches.rs
src-tauri/src/utils/: path.rs
src-tauri/testdata/patterns/: specials.xsd
src-tauri/testdata/xsd/: fabric_info  formats  grid_settings  joints  palette  pattern_info  pattern_properties  pattern_settings  special_stitch_models  stitch_settings  stitches  symbol_settings  symbols
src-tauri/tests/: pattern.rs
src-tauri/tests/fixtures/xsd/: test_palette
src-tauri/tests/utils/: mod.rs
src/api/: history.ts  index.ts  path.ts  pattern.ts  stitches.ts
src/assets/: styles.css
src/components/: CanvasPanel.vue  DropdownTieredMenu.vue  PalettePanel.test.ts  PalettePanel.vue  ToolbarTieredMenuButton.vue  WindowControls.vue
src/schemas/: index.ts  (+1 more)
(+37 files in other folders)
