[package]
name = "embroidery-studio"
version = "0.0.0"
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
strip = true

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.1.1", features = ["test"] }
tauri-plugin-dialog = "2.0.5"
tauri-plugin-fs = "2.0.3"
tauri-plugin-log = "2.0.4"

# Parsing
byteorder = "1.5.0"
encoding_rs = "0.8.35"
memchr = "2.7.4"
hex = "0.4.3"
quick-xml = "0.37.0"
zip = { version = "2.2.2", features = ["zstd", "time"], default-features = false }

# Serialization
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
borsh = { version = "1.5.2", features = ["derive"] }

# Error handling
anyhow = "1.0.94"

# Logging
log = "0.4.22"

# Other
ordered-float = { version = "4.5.0", features = ["borsh", "serde"] }
dyn-clone = "1.0.17"
nutype = { git = "https://github.com/niusia-ua/nutype.git", branch = "feat/borsh", features = ["borsh", "serde"] }
